<resources>
    <string name="app_name">WirebarleyTest</string>
    <string name="main_label">환율 계산</string>
    <string name="label_remittance">송금국가 : </string>
    <string name="label_reception">수취국가 : </string>
    <string name="label_exchange_rate">환율 : </string>
    <string name="label_search_time">조회시간 : </string>
    <string name="label_amount">송금액 : </string>
    <string name="label_usd">미국(USD)</string>

    <string name="exchange_rate">%s %s</string>
    <string name="exchange_result">수취금액은 %s %s 입니다.</string>
    <string name="message">송금액이 바르지 않습니다.</string>
</resources>